syntax = "proto3";

option go_package = "proto/authentication";

package Authorize;

service Authorize {
  rpc Login (Credentials) returns (AuthenticationTokens) {}

  rpc Register (AccountRegistrationRequest) returns (AccountRegistrationResponse) {}
}

message Credentials {
  string username = 1;
  string password = 2;
}

message AuthenticationTokens {
  int32 id = 1;
  string access_token = 2;
}

message AccountRegistrationRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string name = 4;
  string role = 5;
  string profilePictureUrl = 6;
  string biography = 7;
  string motto = 8;
  string surname = 9;
}

message AccountRegistrationResponse {
  bool success = 1;
  int32 id = 2;
}
